# drakonid-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example
src/: constants.rs  lib.rs  main.rs  msg_utils.rs  types.rs  utils.rs  workers.rs
src/commands/: condenser.rs  help.rs  mod.rs  unimplemented.rs
src/server/: mod.rs  svar.rs
