[package]
name = "drakonid"
version = "0.1.0"
authors = ["Arkan <arkan@drakon.io>"]
publish = false

[dependencies]
chrono = "0.4"
config = "0.8"
clap = "2.31"
log = "0.4"
fern = "0.5"
fst = "0.3"
fst-levenshtein = "0.2"
lazy_static = "1.0"
parking_lot = { version = "0.5", features = [ "nightly" ] }
rand = "0.4"
regex = "1.0"
reqwest = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serenity = { version = "0.5", features = [
    "builder", "cache", "client", "framework", "standard_framework", "gateway", "http", "model", "utils"
]}
threadpool = "1.7"
typemap = "0.3"
url = "1.7"

# TODO: Remove this once RLS + Clippy has stabilised (and has support in VSCode)
clippy = { version = "*", optional = true }